First generation of object json file